# libchain

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
.circleci/: config.yml
.githooks/: pre-commit  readme-template.md  readme_template.md
.github/workflows/: ci.yml
examples/: CMakeLists.txt  bench_replace.cpp  readme.cpp
inc/chain/: Chain.hpp  chain.hpp
src/: Chain.cpp  chain.cpp
test/: CMakeLists.txt  CompareTest.hpp  EqualityTest.hpp  FindTest.hpp  JoinTest.hpp  ReplaceTest.hpp  SplitTest.hpp  StrerrorTest.hpp  ToNumberTest.hpp  TransformTest.hpp  TrimTest.hpp  main.cpp  test_equality.cpp  test_find.cpp  test_join.cpp  test_replace.cpp  test_split.cpp  test_strerror.cpp  test_to_number.cpp  test_transform.cpp  test_trim.cpp
